# smtp_gateway

./: Cargo.toml  README.md  clippy.toml
smtp_gateway_bot/: Cargo.toml
src/: connection.rs  lib.rs  message.rs  str.rs  test.rs  timeouts.rs
src/connection/: command.rs  mod.rs
src/connection/command/: commands.rs  mod.rs  test.rs
src/str/: max_lengths.rs  mod.rs  test.rs
src/test/: is_valid_response.rs  mod.rs
