[package]
name = "smtp_bridge"
version = "0.1.0"
description = "A library for receiving SMTP messages"

authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[workspace]
package.publish = false
package.authors = ["RemasteredArch", "Jaxydog"]
package.repository = "https://github.com/RemasteredArch/smtp_bridge/"
package.readme = true
package.license = "AGPL-3.0-or-later"                                 # Maybe "Apache-2.0 OR MIT" for the lib?
package.edition = "2021"

members = ["smtp_bridge_bot"]

[dependencies]
