[package]
name = "smtp_gateway"
version = "0.1.0"
description = "A library that hosts an SMTP gateway server to receive STMP messages for consumption"

authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[workspace]
package.publish = false
package.authors = ["RemasteredArch", "Jaxydog"]
package.repository = "https://github.com/RemasteredArch/smtp_gateway/"
package.readme = true
package.license = "AGPL-3.0-or-later"                                  # Maybe "Apache-2.0 OR MIT" for the lib?
package.edition = "2021"

members = ["smtp_gateway_bot"]

[dependencies]
tokio = { version = "1.40.0", features = ["full"] } # Replace `"full"` later
