[package]
name = "smtp_gateway"
version = "0.1.0"
description = "A library that hosts an SMTP gateway server to receive STMP messages for consumption"

authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[workspace]
package.publish = false
package.authors = ["RemasteredArch", "Jaxydog"]
package.repository = "https://github.com/ArchitecturalDogSoftware/smtp_gateway"
package.readme = true
package.license = "AGPL-3.0-or-later"                                           # Maybe "Apache-2.0 OR MIT" for the lib?
package.edition = "2021"

members = ["smtp_gateway_bot"]

[dependencies]
ascii = "1.1.0"
async-stream = "0.3.6"
futures-core = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] } # Replace `"full"` later

[dev-dependencies]
tokio-test = "0.4.4"
