[package]
name = "smtp_bridge_bot"
version = "0.1.0"
description = "A Discord bot with a built-in SMTP server for notifications"

authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
smtp_bridge = { version = "0.1.0", path = ".." }
