[package]
name = "smtp_gateway_bot"
version = "0.1.0"
description = "A Discord bot with a built-in SMTP server for notifications"

authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
smtp_gateway = { version = "0.1.0", path = ".." }
